--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -31,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +64,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>1439408</td>\n",
        "      <td>2632</td>\n",
        "      <td>null</td>\n",
@@ -76,7 +74,7 @@
        "      <td>20160217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1439408</td>\n",
        "      <td>4663</td>\n",
        "      <td>11002</td>\n",
@@ -86,7 +84,7 @@
        "      <td>null</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>1439408</td>\n",
        "      <td>2632</td>\n",
        "      <td>8591</td>\n",
@@ -96,7 +94,7 @@
        "      <td>null</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>1439408</td>\n",
        "      <td>2632</td>\n",
        "      <td>1078</td>\n",
@@ -106,7 +104,7 @@
        "      <td>null</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>1439408</td>\n",
        "      <td>2632</td>\n",
        "      <td>8591</td>\n",
@@ -135,7 +133,7 @@
        "4      null  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -170,7 +168,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>4129537</td>\n",
        "      <td>450</td>\n",
        "      <td>9983</td>\n",
@@ -179,7 +177,7 @@
        "      <td>20160712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>6949378</td>\n",
        "      <td>1300</td>\n",
        "      <td>3429</td>\n",
@@ -188,7 +186,7 @@
        "      <td>20160706</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>2166529</td>\n",
        "      <td>7113</td>\n",
        "      <td>6928</td>\n",
@@ -197,7 +195,7 @@
        "      <td>20160727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>2166529</td>\n",
        "      <td>7113</td>\n",
        "      <td>1808</td>\n",
@@ -206,7 +204,7 @@
        "      <td>20160727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>6172162</td>\n",
        "      <td>7605</td>\n",
        "      <td>6500</td>\n",
@@ -227,15 +225,15 @@
        "4  6172162         7605       6500          30:1        2       20160708"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# import data\n",
-    "data_path = '../../ml-datasets/O2O-Coupon-Usage-Forecast/'\n",
-    "feature_path = '../../ml-datasets/O2O-Coupon-Usage-Forecast/features/'\n",
+    "data_path = '../ml-datasets/O2O-Coupon-Usage-Forecast/'\n",
+    "feature_path = '../ml-datasets/O2O-Coupon-Usage-Forecast/features/'\n",
     "\n",
     "dfoff = pd.read_csv(data_path + 'ccf_offline_stage1_train.csv', header=0, keep_default_na=False)\n",
     "# 注意这里的 keep_default_na 在判断 nan 的时候有区别，这样就统一了判断标准是 null，而且想 Date 这类特征也被看成 string 了，不用处理小数\n",
@@ -866,21 +864,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
