--- a/0. EDA.ipynb
+++ b/0. EDA.ipynb
@@ -2951,21 +2951,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python Conda",
-   "language": "/Users/Bin/anaconda2/envs/py2/bin/python",
-   "name": "python_conda"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
